# gs

./: .gitignore  LICENSE.md  pyproject.toml
.github/workflows/: test.yml
gs/: __init__.py  _dtype_utils.py
gs/_shared_numpy/: __init__.py  _common.py  _dispatch.py  sparse.py
gs/autograd/: __init__.py  _common.py  linalg.py  random.py  sparse.py
gs/numpy/: __init__.py  _common.py  _dispatch.py  _dtype.py  autodiff.py  linalg.py  random.py  sparse.py
gs/pytorch/: __init__.py  _common.py  _dtype.py  sparse.py
gsops/: __init__.py  _common.py  _dtype_utils.py
gsops/autograd/: __init__.py
gsops/numpy/: __init__.py  _dispatch.py  _dtype.py  linalg.py  random.py
gsops/pytorch/: _common.py  _dtype.py  linalg.py  random.py
tests/: conftest.py  test_against_einsum.py  test_against_numpy.py  test_against_scipy.py  test_autodiff.py  test_backend.py  test_dtype.py
tests/cases/: __init__.py  _base.py  autodiff.py
tests/data/: against_einsum.py  against_numpy.py  against_scipy.py  autodiff.py  backend.py  dtype.py
