[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Geometric Intelligence Lab @ UC Santa Barbara" },
    { name = "Luís F. Pereira", email = "luisfpereira@ucsb.edu" },
    { name = "Giulio Viganò", email = "g.vigano36@campus.unimib.it" },
]
name = "gs"
dynamic = ["version"]
readme = "README.rst"
description = "Geomstats backend."
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "geomstats",
    "nbformat",
    "nbconvert",
]
ci = ["pytest-github-actions-annotate-failures"]
autograd = ["autograd >= 1.3"]
pytorch = ["torch >= 1.9.1"]

[project.urls]
repository = "http://github.com/luisfpereira/gs"

[tool.setuptools.dynamic]
version = { attr = "gs.__version__" }

[tool.setuptools.packages.find]
include = ["gs", "gs.*"]

[tool.pytest.ini_options]
markers = [
    "smoke: simple and basic numerical tests.",
    "random: tests that use randomized data.",
    "ignore: deselect tests.",
    "vec: vectorization tests.",
    "shape: array shape tests.",
    "type: checks output types.",
    "slow: for slow tests.",
    "redundant: redundant test.",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = ["E731"]

[tool.ruff.lint.isort]
known-first-party = ["gs"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["D104"]
"gs/**/*" = ["D"]
"tests/*" = ["D"]
